--- a/vagrantfile
+++ b/vagrantfile
@@ -28,6 +28,28 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     override.vm.network :forwarded_port, guest: 22, host: 9222,  id: "ssh"
   end
 
+  # this relies on the vagrant-aws & vagrant-winrm-syncedfolders plugins
+  config.vm.provider :aws do |aws, override|
+    aws.access_key_id = ENV['AWS_ACCESS_KEY_ID']
+    aws.secret_access_key = ENV['AWS_SECRET_ACCESS_KEY']
+    aws.region = "ap-southeast-2"
+    aws.ami = "ami-74043617"
+    aws.keypair_name = "#{ENV['KEY_NAME']}"
+    aws.tags = {
+      'Name' => 'Vagrant DSC testing'
+    }
+    aws.security_groups = [ ENV['AWS_SECURITY_GROUP_ID'] ]
+    aws.subnet_id = ENV['AWS_SUBNET_ID']
+    aws.associate_public_ip = true
+    aws.user_data = File.read("Tests/aws_user_data.ps1")
+    override.vm.box = "dummy"
+    override.vm.box_url = "https://github.com/mitchellh/vagrant-aws/raw/master/dummy.box"
+    override.ssh.private_key_path = "./#{ENV['KEY_NAME']}.pem"
+    override.winrm.username = "Administrator"
+    override.winrm.password = :aws # this uses the vagrant-aws-winrm plugin to get the password from aws
+    # override.winrm.transport = :ssl
+  end
+
   # vagrant appears to be not closing connections (might not be needed after upgrading to vagrant 1.8.7)
   config.vm.provision "shell", inline: "Set-Item WSMan:\\localhost\\Shell\\MaxShellsPerUser 500"
   #delete existing tests if they exist (for dev)
