--- a/vagrantfile
+++ b/vagrantfile
@@ -8,6 +8,7 @@ $run_test_scenario_script = <<SCRIPT
   $env:TEAMCITY_PROJECT_NAME="#{ENV['TEAMCITY_PROJECT_NAME']}"
   set-location c:/temp/tests
   C:/tools/ruby23/bin/bundle.bat exec rspec Spec/{scenario_name}_spec.rb
+  exit $LASTEXITCODE
 SCRIPT
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
