--- a/vagrantfile
+++ b/vagrantfile
@@ -3,12 +3,14 @@
 VAGRANTFILE_API_VERSION = "2"
 
 $run_test_scenario_script = <<SCRIPT
+  write-output "##teamcity[blockOpened name='Testing Scenario {scenario_name}']"
   $env:OctopusServerUrl="#{ENV['OCTOPUS_SERVER_URL']}"
   $env:OctopusApiKey="#{ENV['OCTOPUS_API_KEY']}"
   $env:TEAMCITY_PROJECT_NAME="#{ENV['TEAMCITY_PROJECT_NAME']}"
   set-location c:/temp/tests
   write-host executing bundle exec rspec Spec/{scenario_name}_spec.rb
   C:/tools/ruby23/bin/bundle.bat exec rspec Spec/{scenario_name}_spec.rb
+  write-output "##teamcity[blockClosed name='Testing Scenario {scenario_name}']"
   exit $LASTEXITCODE
 SCRIPT
 
