--- a/vagrantfile
+++ b/vagrantfile
@@ -114,4 +114,22 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   #run tests for scenario 2 (initial install)
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'scenario_02_remove')
 
+  # Run DSC for scenario 3 (subsequent re-install)
+  config.vm.provision "dsc" do |dsc|
+    dsc.configuration_file  = "Scenario_03_Reinstall.ps1"
+    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.manifests_path = "Tests"
+    dsc.configuration_params = {
+      "-MachineName" => "localhost",
+      "-HostName" => "#{hostname}",
+      "-OctopusServerUrl" => "#{ENV['OCTOPUS_SERVER_URL']}",
+      "-ApiKey" => "#{ENV['OCTOPUS_API_KEY']}",
+      "-Environments" => "The Environment",
+      "-Roles" => "Test-Tentacle",
+      "-ListenPort" => "10933"
+    }
+  end
+
+  #run tests for scenario 3 (subsequent re-install)
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'scenario_03_reinstall')
 end
