--- a/vagrantfile
+++ b/vagrantfile
@@ -30,9 +30,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     v.customize ["modifyvm", :id, "--audio", "none"]
     v.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
     v.customize ["modifyvm", :id, "--usb", "off"]
-#    override.vm.box = "mfellows/windows2012r2"
-#    override.vm.box_version = "1.0.1"
-    override.vm.box = "packer_virtualbox-iso_virtualbox"
+    override.vm.box = "octopusdeploy/dsc-test-server"
+    override.vm.box_version = "0.1.0"
     override.vm.network :forwarded_port, guest: 5985, host: 5985, id: "winrm", auto_correct: true
     override.vm.network :forwarded_port, guest: 80,   host: 8000, id: "web"
     override.vm.network :forwarded_port, guest: 443, host: 8443,  id: "ssl"
