--- a/vagrantfile
+++ b/vagrantfile
@@ -44,6 +44,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     aws.secret_access_key = ENV['AWS_SECRET_ACCESS_KEY']
     aws.region = "ap-southeast-2"
     aws.ami = "ami-1e48717d"
+    aws.instance_type = "c4.xlarge"
     aws.keypair_name = "#{ENV['KEY_NAME']}"
     aws.tags = {
       'Name' => 'Vagrant DSC testing'
