--- a/vagrantfile
+++ b/vagrantfile
@@ -76,6 +76,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     dsc.configuration_file  = "Server_Scenario_01_Install.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
     dsc.manifests_path = "Tests"
+    dsc.abort_on_dsc_failure = true
   end
 
   #run tests for server scenario 1 (initial install)
@@ -85,6 +86,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     dsc.configuration_file  = "Server_Scenario_02_Remove.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
     dsc.manifests_path = "Tests"
+    dsc.abort_on_dsc_failure = true
   end
 
   #run tests for server scenario 2 (remove)
@@ -94,6 +96,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     dsc.configuration_file  = "Server_Scenario_03_Reinstall.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
     dsc.manifests_path = "Tests"
+    dsc.abort_on_dsc_failure = true
   end
 
   #run tests for server scenario 3 (reinstall old version)
@@ -103,6 +106,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     dsc.configuration_file  = "Server_Scenario_04_Upgrade.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
     dsc.manifests_path = "Tests"
+    dsc.abort_on_dsc_failure = true
   end
 
   #run tests for server scenario 4 (upgrade)
@@ -115,6 +119,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     dsc.configuration_file  = "Tentacle_Scenario_01_Install.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
     dsc.manifests_path = "Tests"
+    dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
       "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
       "-ApiKey" => "$ENV:OctopusApiKey",
@@ -132,6 +137,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     dsc.configuration_file  = "Tentacle_Scenario_02_Remove.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
     dsc.manifests_path = "Tests"
+    dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
       "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
       "-ApiKey" => "$ENV:OctopusApiKey",
@@ -149,6 +155,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     dsc.configuration_file  = "Tentacle_Scenario_03_Reinstall.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
     dsc.manifests_path = "Tests"
+    dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
       "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
       "-ApiKey" => "$ENV:OctopusApiKey",
@@ -166,6 +173,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     dsc.configuration_file  = "Tentacle_Scenario_04_Upgrade.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
     dsc.manifests_path = "Tests"
+    dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
       "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
       "-ApiKey" => "$ENV:OctopusApiKey",
