Update to use gem from rubygems.org rather than git

--- a/Tests/Gemfile
+++ b/Tests/Gemfile
@@ -4,4 +4,4 @@ gem "rake"
 gem "serverspec"
 gem "rspec-teamcity", "~> 0.0.1"
 gem "nokogiri"
-gem "octopus-serverspec-extensions", :git => "https://github.com/OctopusDeploy/octopus-serverspec-extensions.git"
+gem "octopus-serverspec-extensions"
