--- a/vagrantfile
+++ b/vagrantfile
@@ -43,7 +43,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     aws.access_key_id = ENV['AWS_ACCESS_KEY_ID']
     aws.secret_access_key = ENV['AWS_SECRET_ACCESS_KEY']
     aws.region = "ap-southeast-2"
-    aws.ami = "ami-1e48717d"
+    aws.ami = "ami-d96265ba" # dsc-test-server-windows-2012-r2--v0.0.31
     aws.instance_type = "c4.xlarge"
     aws.keypair_name = "#{ENV['KEY_NAME']}"
     aws.tags = {
