--- a/vagrantfile
+++ b/vagrantfile
@@ -2,6 +2,13 @@
 
 VAGRANT_FILE_API_VERSION = "2"
 
+aws_access_key_id = ENV['AWS_ACCESS_KEY_ID'] || 'not-set'
+aws_secret_access_key = ENV['AWS_SECRET_ACCESS_KEY'] || 'not-set'
+aws_subnet_id = ENV['AWS_SUBNET_ID'] || 'not-set'
+aws_security_group_id = ENV['AWS_SECURITY_GROUP_ID'] || 'not-set'
+aws_key_name = ENV['KEY_NAME'] || 'not-set'
+azure_vm_password = ENV['AZURE_VM_PASSWORD'] || 'not-set'
+
 $run_test_scenario_script = <<SCRIPT
   write-output "##teamcity[blockOpened name='Testing Scenario {scenario_name}']"
   $env:TEAMCITY_PROJECT_NAME="#{ENV['TEAMCITY_PROJECT_NAME']}"
@@ -40,22 +47,22 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   # this relies on the vagrant-aws & vagrant-winrm-syncedfolders plugins
   config.vm.provider :aws do |aws, override|
-    aws.access_key_id = ENV['AWS_ACCESS_KEY_ID']
-    aws.secret_access_key = ENV['AWS_SECRET_ACCESS_KEY']
+    aws.access_key_id = aws_access_key_id
+    aws.secret_access_key = aws_secret_access_key
     aws.region = "ap-southeast-2"
     aws.ami = "ami-6b6d6008" # dsc-test-server-windows-2012-r2-v0.0.43
     aws.instance_type = "c4.xlarge"
-    aws.keypair_name = "#{ENV['KEY_NAME']}"
+    aws.keypair_name = "#{aws_key_name}"
     aws.tags = {
       'Name' => 'Vagrant DSC testing'
     }
-    aws.security_groups = [ ENV['AWS_SECURITY_GROUP_ID'] ]
-    aws.subnet_id = ENV['AWS_SUBNET_ID']
+    aws.security_groups = [ aws_security_group_id ]
+    aws.subnet_id = aws_subnet_id
     aws.associate_public_ip = true
     aws.user_data = File.read("Tests/aws_user_data.ps1")
     override.vm.box = "dummy"
     override.vm.box_url = "https://github.com/mitchellh/vagrant-aws/raw/master/dummy.box"
-    override.ssh.private_key_path = "./#{ENV['KEY_NAME']}.pem"
+    override.ssh.private_key_path = "./#{aws_key_name}.pem"
     override.winrm.username = "Administrator"
     override.winrm.password = :aws # this uses the vagrant-aws-winrm plugin to get the password from aws
     override.winrm.transport = :ssl
@@ -70,9 +77,9 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     azure.vm_size = 'Standard_DS2_v2'
     azure.vm_image_urn = 'MicrosoftSQLServer:SQL2016SP1-WS2016:Express:latest'
     azure.instance_ready_timeout = 600
-    azure.vm_password = ENV['AZURE_VM_PASSWORD']
+    azure.vm_password = azure_vm_password
     azure.admin_username = "OctoAdmin"
-    azure.admin_password = ENV['AZURE_VM_PASSWORD']
+    azure.admin_password = azure_vm_password
     override.vm.box = "dummy"
     override.vm.box_url = "azure.dummy.box"
     override.winrm.transport = :ssl
