--- a/vagrantfile
+++ b/vagrantfile
@@ -50,7 +50,6 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     aws.access_key_id = aws_access_key_id
     aws.secret_access_key = aws_secret_access_key
     aws.region = "ap-southeast-2"
-    aws.ami = "ami-4e121b2d" # dsc-test-server-windows-2012-r2-v0.0.76
     aws.instance_type = "c4.xlarge"
     aws.keypair_name = "#{aws_key_name}"
     aws.tags = {
@@ -60,8 +59,8 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
     aws.subnet_id = aws_subnet_id
     aws.associate_public_ip = true
     aws.user_data = File.read("Tests/aws_user_data.ps1")
-    override.vm.box = "dummy"
-    override.vm.box_url = "https://github.com/mitchellh/vagrant-aws/raw/master/dummy.box"
+    override.vm.box = "OctopusDeploy/dsc-test-server-windows-2012-r2"
+    override.vm.box_url = "https://s3-ap-southeast-2.amazonaws.com/octopus-vagrant-boxes/vagrant/json/OctopusDeploy/amazon-ebs/dsc-test-server-windows-2012-r2.json"
     override.ssh.private_key_path = "./#{aws_key_name}.pem"
     override.winrm.username = "Administrator"
     override.winrm.password = :aws # this uses the vagrant-aws-winrm plugin to get the password from aws
