--- a/vagrantfile
+++ b/vagrantfile
@@ -113,23 +113,41 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_02_remove')
 
-  # re-install old version
+  # Run DSC to install server with a custom instance name
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_03_Reinstall.ps1"
+    dsc.configuration_file  = "Server_Scenario_03_Install_Custom_Instance.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
     dsc.manifests_path = "Tests"
     dsc.abort_on_dsc_failure = true
   end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_03_reinstall')
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_03_install_custom_instance')
+
+  # remove the server with a custom instance name
+  config.vm.provision "dsc" do |dsc|
+    dsc.configuration_file  = "Server_Scenario_04_Remove_Custom_Instance.ps1"
+    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.manifests_path = "Tests"
+    dsc.abort_on_dsc_failure = true
+  end
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_04_remove_custom_instance')
+
+  # re-install old version
+  config.vm.provision "dsc" do |dsc|
+    dsc.configuration_file  = "Server_Scenario_05_Reinstall.ps1"
+    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.manifests_path = "Tests"
+    dsc.abort_on_dsc_failure = true
+  end
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_05_reinstall')
 
   # upgrade to the latest
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Server_Scenario_04_Upgrade.ps1"
+    dsc.configuration_file  = "Server_Scenario_06_Upgrade.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
     dsc.manifests_path = "Tests"
     dsc.abort_on_dsc_failure = true
   end
-  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_04_upgrade')
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_06_upgrade')
 
   config.vm.provision "shell", path: "Tests/configure-octopus-for-tentacle-tests.ps1"
 
