--- a/vagrantfile
+++ b/vagrantfile
@@ -97,54 +97,54 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   # Run DSC to install server
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Scenarios/Server_Scenario_01_Install.ps1"
+    dsc.configuration_file  = "Server_Scenario_01_Install.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
-    dsc.manifests_path = "Tests"
+    dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_01_install')
 
   # remove the server
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Scenarios/Server_Scenario_02_Remove.ps1"
+    dsc.configuration_file  = "Server_Scenario_02_Remove.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
-    dsc.manifests_path = "Tests"
+    dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_02_remove')
 
   # Run DSC to install server with a custom instance name
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Scenarios/Server_Scenario_03_Install_Custom_Instance.ps1"
+    dsc.configuration_file  = "Server_Scenario_03_Install_Custom_Instance.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
-    dsc.manifests_path = "Tests"
+    dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_03_install_custom_instance')
 
   # remove the server with a custom instance name
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Scenarios/Server_Scenario_04_Remove_Custom_Instance.ps1"
+    dsc.configuration_file  = "Server_Scenario_04_Remove_Custom_Instance.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
-    dsc.manifests_path = "Tests"
+    dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_04_remove_custom_instance')
 
   # re-install old version
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Scenarios/Server_Scenario_05_Reinstall.ps1"
+    dsc.configuration_file  = "Server_Scenario_05_Reinstall.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
-    dsc.manifests_path = "Tests"
+    dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_05_reinstall')
 
   # upgrade to the latest
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Scenarios/Server_Scenario_06_Upgrade.ps1"
+    dsc.configuration_file  = "Server_Scenario_06_Upgrade.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
-    dsc.manifests_path = "Tests"
+    dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_06_upgrade')
@@ -153,9 +153,9 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   # initial tentacle install
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Scenarios/Tentacle_Scenario_01_Install.ps1"
+    dsc.configuration_file  = "Tentacle_Scenario_01_Install.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
-    dsc.manifests_path = "Tests"
+    dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
       "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
@@ -171,9 +171,9 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   # uninstall tentacle
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Scenarios/Tentacle_Scenario_02_Remove.ps1"
+    dsc.configuration_file  = "Tentacle_Scenario_02_Remove.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
-    dsc.manifests_path = "Tests"
+    dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
       "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
@@ -188,9 +188,9 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   # Install old version
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Scenarios/Tentacle_Scenario_03_Reinstall.ps1"
+    dsc.configuration_file  = "Tentacle_Scenario_03_Reinstall.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
-    dsc.manifests_path = "Tests"
+    dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
       "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
@@ -204,9 +204,9 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
 
   # Upgrade it
   config.vm.provision "dsc" do |dsc|
-    dsc.configuration_file  = "Scenarios/Tentacle_Scenario_04_Upgrade.ps1"
+    dsc.configuration_file  = "Tentacle_Scenario_04_Upgrade.ps1"
     dsc.configuration_data_file  = "Tests/Configuration.psd1"
-    dsc.manifests_path = "Tests"
+    dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
       "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
