--- a/vagrantfile
+++ b/vagrantfile
@@ -98,7 +98,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # Run DSC to install server
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "Server_Scenario_01_Install.ps1"
-    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
@@ -107,7 +107,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # remove the server
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "Server_Scenario_02_Remove.ps1"
-    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
@@ -116,7 +116,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # Run DSC to install server with a custom instance name
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "Server_Scenario_03_Install_Custom_Instance.ps1"
-    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
@@ -125,7 +125,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # remove the server with a custom instance name
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "Server_Scenario_04_Remove_Custom_Instance.ps1"
-    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
@@ -134,7 +134,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # re-install old version
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "Server_Scenario_05_Reinstall.ps1"
-    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
@@ -143,7 +143,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # upgrade to the latest
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "Server_Scenario_06_Upgrade.ps1"
-    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
   end
@@ -154,7 +154,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # initial tentacle install
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "Tentacle_Scenario_01_Install.ps1"
-    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
@@ -172,7 +172,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # uninstall tentacle
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "Tentacle_Scenario_02_Remove.ps1"
-    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
@@ -189,7 +189,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # Install old version
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "Tentacle_Scenario_03_Reinstall.ps1"
-    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
@@ -205,7 +205,7 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   # Upgrade it
   config.vm.provision "dsc" do |dsc|
     dsc.configuration_file  = "Tentacle_Scenario_04_Upgrade.ps1"
-    dsc.configuration_data_file  = "Tests/Configuration.psd1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
     dsc.manifests_path = "Tests/Scenarios"
     dsc.abort_on_dsc_failure = true
     dsc.configuration_params = {
