--- a/vagrantfile
+++ b/vagrantfile
@@ -149,6 +149,24 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_06_upgrade')
 
+  # install watchdog
+  config.vm.provision "dsc" do |dsc|
+    dsc.configuration_file  = "Server_Scenario_07_Watchdog_Create.ps1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
+    dsc.manifests_path = "Tests/Scenarios"
+    dsc.abort_on_dsc_failure = true
+  end
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_07_watchdog_create')
+
+  # delete watchdog
+  config.vm.provision "dsc" do |dsc|
+    dsc.configuration_file  = "Server_Scenario_08_Watchdog_Delete.ps1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
+    dsc.manifests_path = "Tests/Scenarios"
+    dsc.abort_on_dsc_failure = true
+  end
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'server_scenario_08_watchdog_delete')
+
   config.vm.provision "shell", path: "Tests/configure-octopus-for-tentacle-tests.ps1"
 
   # initial tentacle install
@@ -217,5 +235,23 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   end
   config.vm.provision "shell", inline: "& c:\\temp\\Tests\\trigger-and-wait-for-healthcheck.ps1; exit $LASTEXITCODE"
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_04_upgrade')
+
+  # install watchdog
+  config.vm.provision "dsc" do |dsc|
+    dsc.configuration_file  = "Tentacle_Scenario_05_Watchdog_Create.ps1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
+    dsc.manifests_path = "Tests/Scenarios"
+    dsc.abort_on_dsc_failure = true
+  end
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_05_watchdog_create')
+
+  # delete watchdog
+  config.vm.provision "dsc" do |dsc|
+    dsc.configuration_file  = "Tentacle_Scenario_06_Watchdog_Delete.ps1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
+    dsc.manifests_path = "Tests/Scenarios"
+    dsc.abort_on_dsc_failure = true
+  end
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_06_watchdog_delete')
 
 end
