Add e2e tests for tentacle-comms-port

--- a/vagrantfile
+++ b/vagrantfile
@@ -254,4 +254,32 @@ Vagrant.configure(VAGRANT_FILE_API_VERSION) do |config|
   end
   config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_06_watchdog_delete')
 
+  # remove in preparation for testing comms port
+  config.vm.provision "dsc" do |dsc|
+    dsc.configuration_file  = "Tentacle_Scenario_07_Remove.ps1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
+    dsc.manifests_path = "Tests/Scenarios"
+    dsc.abort_on_dsc_failure = true
+    dsc.configuration_params = {
+      "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+      "-ApiKey" => "$ENV:OctopusApiKey",
+      "-Environments" => "The-Env",
+      "-Roles" => "Test-Tentacle"
+    }  end
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_07_remove')
+
+  # tentacle comms port
+  config.vm.provision "dsc" do |dsc|
+    dsc.configuration_file  = "Tentacle_Scenario_08_TentacleCommsPort.ps1"
+    dsc.configuration_data_file  = "Tests/Scenarios/Configuration.psd1"
+    dsc.manifests_path = "Tests/Scenarios"
+    dsc.abort_on_dsc_failure = true
+    dsc.configuration_params = {
+      "-OctopusServerUrl" => "$ENV:OctopusServerUrl",
+      "-ApiKey" => "$ENV:OctopusApiKey",
+      "-Environments" => "The-Env",
+      "-Roles" => "Test-Tentacle"
+    }  end
+  config.vm.provision "shell", inline: $run_test_scenario_script.gsub('{scenario_name}', 'tentacle_scenario_08_tentacle_comms_port')
+
 end
